--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
                 <li><a href="https://thamra-tech.github.io/h/" class="text-gray-600 hover:text-green-600 transition-colors">الرئيسية</a></li>
                 <li><a href="#articles" class="text-gray-600 hover:text-green-600 transition-colors">المقالات</a></li>
                 <li><a href="#benefits" class="text-gray-600 hover:text-green-600 transition-colors">المزايا</a></li>
-                <li><a href="#contact" class="text-gray-600 hover:text-green-600 transition-colors">تواصل معنا</a></li>
             </ul>
 
             <!-- زر "انضم إلينا" -->
@@ -136,7 +135,6 @@
                 <li><a href="https://thamra-tech.github.io/h/" class="text-gray-600 hover:text-green-600 transition-colors block py-2">الرئيسية</a></li>
                 <li><a href="#articles" class="text-gray-600 hover:text-green-600 transition-colors block py-2">المقالات</a></li>
                 <li><a href="#benefits" class="text-gray-600 hover:text-green-600 transition-colors block py-2">المزايا</a></li>
-                <li><a href="#contact" class="text-gray-600 hover:text-green-600 transition-colors block py-2">تواصل معنا</a></li>
                 <li>
              <a href="https://thamra-tech.github.io/join-Us/">
                  <button id="join-now-mobile-btn" class="inline-flex items-center px-4 py-2 text-lg font-medium rounded-xl shadow-sm text-white bg-green-600 hover:bg-green-700 transition-colors">انضم الآن</button>
@@ -176,9 +174,11 @@
                         </div>
                         <h3 class="text-xl md:text-2xl font-bold mb-2 text-green-800">النباتات</h3>
                         <p class="text-gray-600">تعرف على أنواع النباتات المختلفة وكيفية العناية بها.</p>
+                        <a href="https://thamra-tech.github.io/plants/">
                         <button class="mt-4 px-6 py-2 bg-green-600 text-white rounded-xl hover:bg-green-700 transition-colors">
                             اقرأ المزيد
                         </button>
+                        </a>
                     </div>
                     <!-- كارت مقالات الأمراض -->
                     <div class="card bg-white p-8 rounded-xl shadow-lg transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 transform border border-green-100 animate-fade-in-right" style="animation-delay: 0.3s;">
@@ -187,9 +187,11 @@
                         </div>
                         <h3 class="text-xl md:text-2xl font-bold mb-2 text-green-800">الأمراض</h3>
                         <p class="text-gray-600">اكتشف أسباب الأمراض النباتية وطرق الوقاية والعلاج.</p>
+                        <a href="https://thamra-tech.github.io/Plant-diseases/">
                         <button class="mt-4 px-6 py-2 bg-green-600 text-white rounded-xl hover:bg-green-700 transition-colors">
                             اقرأ المزيد
                         </button>
+                        </a>
                     </div>
                     <!-- كارت مقالات الآفات -->
                     <div class="card bg-white p-8 rounded-xl shadow-lg transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 transform border border-green-100 animate-fade-in-right" style="animation-delay: 0.5s;">
@@ -198,9 +200,11 @@
                         </div>
                         <h3 class="text-xl md:text-2xl font-bold mb-2 text-green-800">الآفات</h3>
                         <p class="text-gray-600">تعرف على أخطر الآفات الزراعية وكيفية مكافحتها بفعالية.</p>
+                        <a href="https://thamra-tech.github.io/Plant-pests/">
                         <button class="mt-4 px-6 py-2 bg-green-600 text-white rounded-xl hover:bg-green-700 transition-colors">
                             اقرأ المزيد
                         </button>
+                        </a>
                     </div>
                     <!-- كارت مقالات المبيدات -->
                     <div class="card bg-white p-8 rounded-xl shadow-lg transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 transform border border-green-100 animate-fade-in-right" style="animation-delay: 0.7s;">
@@ -209,9 +213,11 @@
                         </div>
                         <h3 class="text-xl md:text-2xl font-bold mb-2 text-green-800">المبيدات</h3>
                         <p class="text-gray-600">دليلك الشامل لاستخدام المبيدات بأمان وفعالية.</p>
+                        <a href="https://thamra-tech.github.io/Pesticides/">
                         <button class="mt-4 px-6 py-2 bg-green-600 text-white rounded-xl hover:bg-green-700 transition-colors">
                             اقرأ المزيد
                         </button>
+                        </a>
                     </div>
                     <!-- كارت مقالات التغذية والتسميد -->
                     <div class="card bg-white p-8 rounded-xl shadow-lg transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 transform border border-green-100 animate-fade-in-right" style="animation-delay: 0.9s;">
@@ -220,20 +226,11 @@
                         </div>
                         <h3 class="text-xl md:text-2xl font-bold mb-2 text-green-800">التغذية والتسميد</h3>
                         <p class="text-gray-600">أسرار التغذية الصحيحة للنباتات للحصول على إنتاج وفير.</p>
+                        <a href="https://thamra-tech.github.io/Fertilization-program/">
                         <button class="mt-4 px-6 py-2 bg-green-600 text-white rounded-xl hover:bg-green-700 transition-colors">
                             اقرأ المزيد
                         </button>
-                    </div>
-                     <!-- كارت مقالات الاستشارة -->
-                    <div class="card bg-white p-8 rounded-xl shadow-lg transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 transform border border-green-100 animate-fade-in-right" style="animation-delay: 1.1s;">
-                        <div class="bg-green-500 text-white rounded-full p-3 w-fit mb-4 mx-auto">
-                            <i class="fa-solid fa-comments text-3xl"></i>
-                        </div>
-                        <h3 class="text-xl md:text-2xl font-bold mb-2 text-green-800">استشارة</h3>
-                        <p class="text-gray-600">طرح استفساراتك والحصول على استشارات من الخبراء الزراعيين.</p>
-                        <button class="mt-4 px-6 py-2 bg-green-600 text-white rounded-xl hover:bg-green-700 transition-colors">
-                            اقرأ المزيد
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -309,7 +306,6 @@
                     <li><a href="#hero" class="text-gray-300 hover:text-white transition-colors">الرئيسية</a></li>
                     <li><a href="#articles" class="text-gray-300 hover:text-white transition-colors">المقالات</a></li>
                     <li><a href="#benefits" class="text-gray-300 hover:text-white transition-colors">المزايا</a></li>
-                    <li><a href="#contact" class="text-gray-300 hover:text-white transition-colors">تواصل معنا</a></li>
                 </ul>
             </div>
 
@@ -473,3 +469,4 @@
     </script>
 </body>
 </html>
+
